# libera-reader

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml  rust-toolchain.toml
crates/libera-reader/: Cargo.toml  Dioxus.toml  tauri.conf.json
crates/libera-reader-core/: Cargo.toml
crates/libera-reader-core/examples/: example.rs  test_lib.rs
crates/libera-reader-core/src/: app_core.rs  app_dirs.rs  app_state.rs  book_api.rs  book_manager.rs  core.rs  lib.rs  settings.rs  settings_manger.rs  types.rs  utils.rs  vars.rs
crates/libera-reader-core/src/db/: crud.rs  mod.rs  models.rs  models_impl.rs  schema.prisma
crates/libera-reader-core/src/db/crud/: book.rs  mod.rs
crates/libera-reader-core/src/db/prisma/: schema.prisma
crates/libera-reader-core/src/services/: data_extraction_service.rs  dir_scan_service.rs  mod.rs  notify_service.rs
crates/libera-reader-core/src/services/dir_scan_service/: book_adder.rs  book_deleter.rs  book_separator.rs  books_separator.rs  mod.rs
crates/libera-reader-core/src/services/notify_service/: handlers.rs  mod.rs  watchdog.rs
crates/libera-reader-core/src/services/notify_service/handlers/: book_adding_handler.rs  book_deletion_handler.rs  book_path_update_handler.rs  dir_deletion_handler.rs  dir_renaming_handler.rs  mod.rs
crates/libera-reader-core/tests/: dir_scan_service_test.rs  file_crud_lib.rs  integration_test.rs  notify_service_test.rs
crates/libera-reader-core/tests/test_lib/: mod.rs
crates/libera-reader-egui/: Cargo.toml
crates/libera-reader-egui/src/: main.rs  router.rs  side_bar_state.rs  sidebar.rs
crates/libera-reader-slint/: Cargo.toml  build.rs
crates/libera-reader-slint/src/: main.rs
crates/libera-reader-slint/ui/: appwindow.slint  content.slint  header.slint  main.slint  root.slint  side_bar.slint  some.slint  vars.slint
crates/libera-reader-slint/ui/pages/: setup.slint
crates/libera-reader-slint/ui/pages/app/: app.slint  header.slint  side_bar.slint
crates/libera-reader-slint/ui/pages/app/content/: bookmarks.slint  content.slint  favorite.slint  file_manager.slint  history.slint  library.slint  settings.slint  stats.slint
crates/libera-reader-slint/ui/pages/book_viewer/: book_viewer.slint
crates/libera-reader-slint/ui/pages/main/: body.slint  header.slint  side_bar.slint
crates/libera-reader/assets/: side_bar.css
crates/libera-reader/src/: app.rs  main.rs  router.rs
crates/libera-reader/src/ui/: mod.rs
crates/libera-reader/src/ui/pages/: mod.rs
crates/libera-reader/src/ui/pages/app/: bookmarks.rs  library.rs  mod.rs  side_bar.rs
crates/libera-reader/src/ui/pages/book_viewer/: mod.rs
crates/libera-reader/src/ui/pages/main/: header.rs  mod.rs  side_bar.rs
crates/libera-reader/src/ui/pages/main/content/: favorite.rs  history.rs  mod.rs  settings.rs  stats.rs
crates/libera-reader/src/ui/pages/setup/: mod.rs
crates/measure_time_macro/: Cargo.toml
crates/measure_time_macro/examples/: example.rs
crates/measure_time_macro/src/: lib.rs
crates/mupdf/: Cargo.toml
crates/mupdf-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
crates/mupdf/examples/: test_mupdf_memory_leak.rs
crates/mupdf/src/: document.rs  lib.rs  outline.rs  page.rs  pixmap.rs
crates/redb_example/: Cargo.toml
crates/redb_example/src/: main.rs  utils.rs
crates/redb_example/src/db/: crud.rs  mod.rs  models.rs
crates/test_notify/: Cargo.toml
crates/test_notify/src/: main.rs  notify_service.rs
prisma-cli/: Cargo.toml
