[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[alias]
prisma = "run -p <prisma crate name> --"

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }
remove = "0.1.3"
serde = "1.0.203"

