[package]
name = "libera-reader-core"
version = "0.0.2"
authors = ["RikaKit2"]
license = "AGPL-3"
repository = "https://github.com/RikaKit2/libera-reader"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
directories = "5.0.1"
notify = "7.0.0"
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
walkdir = "2.5.0"
mupdf = { version = "0.1.0", path = "../mupdf" }
data-encoding = "2.6.0"
gxhash = "3.4.1"
rayon = "1.10.0"
native_db = { version = "0.8", features = ["tokio"] }
native_model = "0.4"
measure_time_macro = { version = "0.1.0", path = "../measure_time_macro" }
itertools = "0.13.0"
once_cell = "1.19.0"


[dev-dependencies]
tracing-subscriber = "0.3.18"
