[package]
name = "libera-reader-core"
version = "0.0.2"
authors = ["RikaKit2"]
license = "AGPL-3"
repository = "https://github.com/RikaKit2/libera-reader"
edition = "2021"

[dependencies]
directories = "6.0.0"
notify = "8.0.0"
serde = "1.0"
tracing = "0.1"
walkdir = "2.5.0"
mupdf = { version = "0.1.0", path = "../mupdf" }
data-encoding = "2.6.0"
gxhash = "3.4.1"
rayon = "1.10.0"
native_db = { version = "0.8" }
native_model = "0.4.20"
measure_time_macro = { version = "0.1.0", path = "../measure_time_macro" }
itertools = "0.14.0"
once_cell = "1"
concurrent-queue = "2.5.0"
num_cpus = "1.16.0"


[dev-dependencies]
tracing-subscriber = "0.3.18"
