[package]
name = "libera-reader"
version = "0.1.0"
authors = ["RikaKit2"]
license = "AGPL-3"
repository = "https://github.com/RikaKit2/libera-reader"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }

egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
lazy_static = "1.5.0"
egui_flex = "0.2.0"

