[package]
name = "libera-reader"
version = "0.1.0"
description = ""
authors = ["RikaKit2 <174120712+RikaKit2@users.noreply.github.com>"]
license = "AGPLv3"
repository = "https://github.com/RikaKit2/libera-reader"
default-run = "libera-reader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis = "0.2.2"
dioxus = { version = "0.5.6", features = ["desktop", "router"] }
dioxus-logger = "0.5.1"

[profile.release]
lto = true
opt-level = 3
debug = false
