[package]
name = "some"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
native_db = { version = "0.7.1", features = ["chrono", "tokio"] }
once_cell = "1.19.0"
chrono = "0.4.38"
gxhash = "3.4.1"
native_model = "0.4.19"
itertools = "0.13.0"
rayon = "1.10.0"
data-encoding = "2.6.0"
queues = "1.1.0"
crossbeam-channel = "0.5.13"
